css/ovbox.css
input {
    margin-left: 4px;
    margin-right: 4px;
    margin-top: 2px;
    margin-bottom: 4px;
    padding: 5px;
    border-radius: 7px;
    background: #eee;
}
input[type="button"]:hover {
    background: #aaa;
}
html {
    background: url(houseofconsort.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
body {
    color: #290d0d;
    font-family: Helvetica,Arial,sans-serif;
    font-size: 20px;
    margin: 0px;
}
.important {
    color: #aa0000;
}
.failure {
    color: #aa0000;
    font-size: 90%;
}
.deverror {
    border: 8px solid #aa0000;
    border-radius: 3px;
    overflow: auto;
    background-color: #A7A7A790;
    padding: 14px;
}
.warning {
    border: 2px solid #aa0000;
    border-radius: 11px;
    overflow: auto;
    background-color: #A7A7A790;
    padding: 14px;
    margin: 10px;
}
div {
    overflow: auto;
}
.room {
    background-color: #A7A7A790;
    margin: 10px;
    padding: 8px;
    border: 3px solid #106610;
    border-radius: 15px;
    overflow: auto;
}
.myroom {
    background-color: #A7B7A790;
    margin: 10px;
    padding: 8px;
    border: 5px solid #106610;
    border-radius: 15px;
    overflow: auto;
}
.rname {
    margin-bottom: 3px;
    font-size: 120%;
    font-weight: bold;
}
.rdesc {
    font-size: 70%;
}
.donate {
    margin: 10px;
    padding: 8px;
}
.rmembers {
    background-color: #CDE0CD90;
    border-radius: 8px;
    margin-top: 8px;
    margin-bottom: 8px;
    padding: 8px;
    line-height: 2.4em;
    overflow: auto;
}
.devproptitle {
    font-weight: bold;
}
.devprop {
    background-color: #EDDBD890;
    margin: 10px;
    padding: 8px;
    border: 3px solid #644944;
    border-radius: 15px;
    overflow: auto;
}
table {
    border: 2px solid #644944;
    border-radius: 5px;
}
tr {
    background-color: #b7cef1;
}
.actmember {
    background-color: #dcc378;
    padding: 5px;
    border-radius: 7px;
    color: #000000;
    font-weight: bold;
    white-space: nowrap;
}
.psvmember {
    background-color: #d6d6d6;
    color: #666666;
    padding: 5px;
    border-radius: 7px;
    white-space: nowrap;
}
.actlistener {
    background-color: #4096d6;
    padding: 5px;
    border-radius: 0px;
    color: #000000;
    font-weight: bold;
    white-space: nowrap;
    font-size: small;
}
.psvlistener {
    background-color: #abc4d6;
    color: #666666;
    padding: 5px;
    border-radius: 0px;
    white-space: nowrap;
    font-size: small;
}
.roomsettingstoggle {
    float: right;
}
.help {
    float: right;
}
.roomsettingstitle {
    font-weight: bold;
}
.foto {
    font-size: x-small;
}
.devclaim {
    background-color: #EDDBD890;
    margin: 10px;
    padding: 8px;
    border: 3px solid #644944;
    border-radius: 15px;
    overflow: auto;
}
a.mixer {
    background-color: #909990;
    border-radius: 8px;
    margin-top: 8px;
    margin-bottom: 8px;
    padding: 8px;
    line-height: 2.2em;
    overflow: auto;
}
div.mixer {
    background-color: #9fae9d90;
    border-radius: 8px;
    margin-top: 8px;
    margin-bottom: 8px;
    padding: 8px;
    overflow: auto;
}
.kick {
    margin: 0px;
    padding: 0px;
    color: #700000;
    font-weight: bold;
}
.latency {
    font-size: x-small;
}
.expert {
    background-color: #77777750;
    border: 2px solid #a02020;
    margin-top: 3px;
    margin-bottom: 3px;
    padding: 2px;
}
 /* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 50px;
  height: 24px;
  margin-left: 4px;
}
.srvjit {
    font-size: 150%;
    font-weight: bold;
		margin-left: 3px;
		margin-right: 3px;
}
/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 16px;
  width: 16px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #5f8757;
}

input:focus + .slider {
  box-shadow: 0 0 1px #5f8757;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 24px;
}
.slider.round:before {
  border-radius: 50%;
} 
.ovstage {
    float: right;
    overflow: auto;
    font-size: 80%;
    margin-bottom: 10px;
}
.bulletinboard {
    background-color: #fffdb4;
    border: 1px solid #11266d;
    color: #454577;
    border-radius: 8px;
    padding: 10px;
    white-space: pre-wrap;
    max-height: 80px;
}
.presetarea {
    padding-top: 9px;
    padding-bottom: 9px;
}
.presetspan {
    background-color: #d6d6d6;
    color: #666666;
    margin: 9px;
    padding: 5px;
    border-radius: 7px;
    border: 2px solid #000;
    white-space: nowrap;
}
.presetload {
    background-color: #d6d6d6;
    color: #666666;
    border: 0px solid;
    border-radius: 7px;
}
.presetrm {
    margin: 0px;
    padding: 0px;
    color: #700000;
    font-weight: bold;
}
.login {
    font-size: 100%;
}
.logininp {
    border-radius: 8px;
    border: 1px solid #999;
    padding: 5px;
    font-size: 100%;
}
.loginlab {
    margin-top: 15px;
}
.presetact {
    background-color: #206090;
    color: #ffffff;
    font-weight: bold;
}
.uibutton {
    margin-left: 4px;
    margin-right: 4px;
    margin-top: 2px;
    margin-bottom: 4px;
    padding: 5px;
    border-radius: 7px;
    background: #eee;
}
button.uibutton:hover {
    background: #aaa;
}
.ad {
    margin: 10px;
    background-color: #c9806bd0;
    padding: 15px;
    border-radius: 13px;
    border: 2px solid #4f3327;
    font-size: 130%;
    font-family: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Georgia, serif;
    color: #000;
}
.ovhead {
    background-color: #e1e5e0d0;
    margin: 0px;
    min-height: 40px;
    position: relative;
    padding: 8px;
    padding-bottom: 2px;
    margin-bottom: 10px;
    border-bottom: 1px solid #777;
}
.ovnav {
    float: left;
    display: block;
    overflow: auto;
    font-size: 100%;
    font-weight: bold;
    margin-top: 5px;
    margin-left: 5px;
    margin-right: 5px;
}
.navbaricon {
    height: 40px;
    margin-top: 0px;
    
}
h1.navbar {
    float: left;
    display: block;
    overflow: auto;
    font-size: 120%;
    margin: 10px;
    margin-top: 6px;
}
a.navbar {
/* text-decoration:none;*/
    color:#311;
    font-weight: bold;
    margin-top: 8px;
}
a.navbar:hover {
    color:#933;
    cursor:pointer;
}
.ovuser {
    float: right;
    display: block;
    overflow: auto;
    font-size: 100%;
    font-weight: bold;
    margin-top: 10px;
    margin-left: 5px;
    margin-right: 5px;
}
.ovlogout {
    float: right;
    display: block;
    margin-top: 0px;
    margin-left: 5px;
    margin-right: 5px;
}
.adminarea {
    background-color: #eddddd;
    padding-left: 8px;
    padding-right: 8px;
    margin-left: 6px;
    margin-right: 6px;
}
a.adminarea {
    color: #a02020;
}
a.adminarea:hover {
    color: #000;
}
.ovfoot {
    background-color: #e1e5e0d0;
    padding: 10px;
    border-top: 1px solid #777;
    margin-top: 10px;
    position: relative;
}
.ovtitle {
    float: left;
    display: block;
    overflow: auto;
    font-size: 160%;
    font-weight: bold;
}
.ovcontent {
    margin: auto;
    padding: 8px;
    overflow: auto;
    background-color: #e1e5e090;
}
.userarea {
    margin-top: 30px;
}
.ovsection {
    background-color: #e1e1e190;
    border: 1px solid #777;
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 8px;
    color: #000;
}
.ovsectiontitle {
    font-size: 110%;
    margin-top: 4px;
    margin-bottom: 9px;
}
.devstatus {
    margin-top: 5px;
}
.sr-only{
    position:absolute;
    width:1px;
    height:1px;
    padding:0;
    margin:-1px;
    overflow:hidden;
    clip:rect(0,0,0,0);
    border:0
}
.icon-bar{
    display:block;
    width:24px;
    height:2px;
    border-radius:1px;
    background-color: #000;
    margin-top: 4px;
    margin-bottom: 4px;
}
.navbar-toggle{
    position:relative;
    float:left;
    padding:4px 5px;
    margin-top:2px;
    margin-right:2px;
    margin-bottom:8px;
    background-color:transparent;
    background-image:none;
    border:2px solid #666;
    border-radius:4px;
}
@media (min-width: 1200px) {
    .ovcontent {
	width: 1200px;
    }
}
@media (min-width: 2000px) {
    .ovcontent {
	width: 60%;
    }
}
@media (max-width: 1023px) {
    .ovuser {
	padding-top: 7px;
	padding-bottom: 7px;
    }
    .ovnav {
	padding-top: 7px;
	padding-bottom: 7px;
    }
    .ovnavh {
	display:none;
	float:none;
    }
    .ovnavnh {
	display: block;
	float: none;
	width: 100%;
	height: 40px;
    }
    a.navbar {
	display: block;
	float: none;
    }
}
@media (min-width: 1024px) {
    .navbar-toggle{
	display: none;
    }
    .ovnavh {
	display:block;
    }
}

